derive/test/compile_fail/enum_unlabeled_fields.rs
use sval_derive::*;

#[derive(Value)]
#[sval(unlabeled_values)]
pub enum Enum {
    A,
    B,
    C,
}

fn main() {

}